--- a/jabster/views/base.html
+++ b/jabster/views/base.html
@@ -8,7 +8,7 @@
   <body>
   <div class="navigation">
     <ul>
-      <li><a href="#">Home</a></li>
+      <li><a href="/">Home</a></li>
       <li><a href="#">About</a></li>
       <li><a href="#">Contact</a></li>
       <li><a href="#">JAJB!</a></li>
