Add login and sign up to nav bar and index

--- a/jabster/views/index.html
+++ b/jabster/views/index.html
@@ -1,5 +1,13 @@
 {% extends "base.html" %}
 {% block content %}
+<div>
+	<h2>Welcome to Jabster!</h2>
+	<p>Jabster is a personal blog site where you can express yourself! Meet friends, read interesting blogs, and have fun! This is a stupid description, but is content. <i>JAB on!</i></p>
+	<div>
+		<a href ="/login">Log In</a>
+		<a href ="/login">Sign Up</a>
+	</div>
+</div>
   <h2>This is some content!</h2>
   <ul>
     {% for item in items %}
