--- a/jabster/views/base.html
+++ b/jabster/views/base.html
@@ -9,8 +9,8 @@
   <div class="navigation">
     <ul>
       <li><a href="/">Home</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Contact</a></li>
+      <li><a href="/login">Login</a></li>
+      <li><a href="/login">Sign Up</a></li>
       <li><a href="#">JAJB!</a></li>
     </ul>
   </div>
