--- a/jabster/views/login.html
+++ b/jabster/views/login.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="login-form">
 	<h2>Sign In to Jabster!</h2>
-	<form method="POST" action="/login">
+	<form method="POST" action="/login/login">
 		<p><input type="text" name="username" value="" placeholder="Username"></p>
 		<p><input type="password" name="password" value="" placeholder="Password"></p>
 		<p class="submit"><button type="submit" name="login">Login</button></p>
@@ -11,7 +11,7 @@
 
 <div class="register-form">
 	<h2>New User? Create an account here!</h2>
-	<form method="POST" action="/register">
+	<form method="POST" action="/login/register">
 		<p><input type="text" name="name" value="" placeholder="Your name" required></p>
 		<p><input type="text" name="username" value="" placeholder="Your username" required></p>
 		<p><input type="password" name="password" value="" placeholder="Your password" required></p>
