--- a/jabster/views/login.html
+++ b/jabster/views/login.html
@@ -5,7 +5,7 @@
 	<form method="POST" action="/login/login">
 		<p><input type="text" name="username" value="" placeholder="Username"></p>
 		<p><input type="password" name="password" value="" placeholder="Password"></p>
-		<p class="submit"><button type="submit" name="login">Login</button></p>
+		<p class="submit"><button type="submit">Login</button></p>
 	</form>
 </div>
 
@@ -15,7 +15,7 @@
 		<p><input type="text" name="name" value="" placeholder="Your name" required></p>
 		<p><input type="text" name="username" value="" placeholder="Your username" required></p>
 		<p><input type="password" name="password" value="" placeholder="Your password" required></p>
-		<p class="submit"><button type="submit" name="register">Register</button></p>
+		<p class="submit"><button type="submit">Register</button></p>
 	</form>
 </div>
 {% endblock %}
