--- a/jabster/views/base.html
+++ b/jabster/views/base.html
@@ -11,10 +11,10 @@
       <li><a href="/">Home</a></li>
       <li><a href="/login">Login</a></li>
       <li><a href="/login">Sign Up</a></li>
-      <li><a href="#">JAJB!</a></li>
+      <li><a href="/newBlog">Blog</a></li>
     </ul>
   </div>
-
+<!-- <p style="color:red">{% if messages.errorMessage %}{{messages.errorMessage}}{% endif %}</p> -->
   {% block content %}{% endblock %}
 
   <div class="footer">
